--- a/src/WAP/WAP.fxml
+++ b/src/WAP/WAP.fxml
@@ -10,28 +10,34 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WAP.Controller">
-      <AnchorPane prefHeight="720.0" prefWidth="1280.0">
-            <Canvas fx:id="myCanvas" height="609.0" layoutX="55.0" layoutY="64.0" width="987.0" />
-            <Button fx:id="problemReadButton" contentDisplay="CENTER" layoutX="1095.0" layoutY="86.0" mnemonicParsing="false" onAction="#onProblemReadClicked" text="形状情報読み取り" textAlignment="CENTER" />
-            <Button fx:id="hintReadButton" contentDisplay="CENTER" layoutX="1103.0" layoutY="153.0" mnemonicParsing="false" onAction="#onHintReadClicked" text="ヒント読み取り" textAlignment="CENTER" />
-            <Button fx:id="solveButton" contentDisplay="CENTER" layoutX="1111.0" layoutY="228.0" mnemonicParsing="false" onAction="#onSolveClicked" prefHeight="27.0" prefWidth="91.0" text="Solve" textAlignment="CENTER" />
-      <Label fx:id="piecesLabel" layoutX="62.0" layoutY="43.0" text="Pieces: ?">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <Button fx:id="canvasClearButton" layoutX="55.0" layoutY="679.0" mnemonicParsing="false" onAction="#onCanvasClearClicked" text="キャンバスクリア" textAlignment="CENTER" />
-      <TextArea fx:id="consoleArea" editable="false" layoutX="1057.0" layoutY="287.0" prefHeight="384.0" prefWidth="200.0">
-         <font>
-            <Font name="Consolas" size="13.0" />
-         </font>
-      </TextArea>
-         </AnchorPane>
-   <columnConstraints>
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-   </rowConstraints>
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
+          fx:controller="WAP.Controller">
+    <AnchorPane prefHeight="720.0" prefWidth="1280.0">
+        <Canvas fx:id="myCanvas" height="609.0" layoutX="55.0" layoutY="64.0" width="987.0"/>
+        <Button fx:id="problemReadButton" contentDisplay="CENTER" layoutX="1095.0" layoutY="86.0"
+                mnemonicParsing="false" onAction="#onProblemReadClicked" text="形状情報読み取り" textAlignment="CENTER"/>
+        <Button fx:id="hintReadButton" contentDisplay="CENTER" layoutX="1103.0" layoutY="153.0" mnemonicParsing="false"
+                onAction="#onHintReadClicked" text="ヒント読み取り" textAlignment="CENTER"/>
+        <Button fx:id="solveButton" contentDisplay="CENTER" layoutX="1111.0" layoutY="228.0" mnemonicParsing="false"
+                onAction="#onSolveClicked" prefHeight="27.0" prefWidth="91.0" text="Solve" textAlignment="CENTER"/>
+        <Label fx:id="piecesLabel" layoutX="62.0" layoutY="43.0" text="Pieces: ?">
+            <font>
+                <Font size="14.0"/>
+            </font>
+        </Label>
+        <Button fx:id="canvasClearButton" layoutX="55.0" layoutY="679.0" mnemonicParsing="false"
+                onAction="#onCanvasClearClicked" text="キャンバスクリア" textAlignment="CENTER"/>
+        <TextArea fx:id="consoleArea" editable="false" layoutX="1057.0" layoutY="287.0" prefHeight="384.0"
+                  prefWidth="200.0">
+            <font>
+                <Font name="Consolas" size="13.0"/>
+            </font>
+        </TextArea>
+    </AnchorPane>
+    <columnConstraints>
+        <ColumnConstraints/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints/>
+    </rowConstraints>
 </GridPane>
